[package]
name = "axtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.18", features = ["macros", "ws"]}
serde_json = "1.0.96"
sysinfo = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
